--- a/index.html
+++ b/index.html
@@ -22,33 +22,31 @@
         <!-- SITE-HEADER-TOP -->
         <div class="site-header-top">
             <div class="site-header-top-container container">
-                <!-- SITE-HEADER-LOGO -->
-                <a class="site-header-logo" href="index.html">
-                    <img class="site-header-logo-img" src="img/logo-purple.svg.svg" alt="N24 logo" width="264" height="28">
-                </a>
-
-                <!-- CURRENCY-RATES -->
-                <ul class="currency-rates">
-                    <li class="currency-rates-item">
-                        <b class="currency-rates-type">$</b>
-                        <span class="currency-rates-value">10650.06</span>
-                    </li>
-                    <li class="currency-rates-item">
-                        <b class="currency-rates-type">Р</b>
-                        <span class="currency-rates-value">146.08</span>
-                    </li>
-                </ul>
-
-                <!-- GLOBAL-SEARCH-FORM -->
-
-                <!-- LANG-TOGGLE -->
-                <div class="lang-toggle">
-                    <a class="lang-toggle-link lang-toggle-link-active" href="index.html">УЗ</a>
-                    <a class="lang-toggle-link" href="index.html/ru">РУ</a>
+                
+                <div class="site-header-top-inner">
+                    <a class="site-header-logo" href="index.html">
+                        <img class="site-header-logo-img" src="img/logo-purple.svg.svg" alt="N24 logo" width="264" height="28">
+                    </a>
+                    <ul class="currency-rates">
+                        <li class="currency-rates-item">
+                            <b class="currency-rates-type">$</b>
+                            <span class="currency-rates-value">10650.06</span>
+                        </li>
+                        <li class="currency-rates-item">
+                            <b class="currency-rates-type">Р</b>
+                            <span class="currency-rates-value">146.08</span>
+                        </li>
+                    </ul>
                 </div>
 
-                <!-- SITE-HEADER-AUTH -->
-                <a class="button button-primary" href="#">Войти</a>
+                <div class="site-header-top-inner">
+                    <input class="site-search" type="text" placeholder="Поиск" name="text" id="text">
+                    <div class="lang-toggle">
+                        <a class="lang-toggle-link lang-toggle-link-active" href="index.html">УЗ</a>
+                        <a class="lang-toggle-link" href="index.html/ru">РУ</a>
+                    </div>
+                    <a class="button button-primary" href="#">Войти</a>
+                </div>
             </div>
         </div>
     </header>
