--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
 
         <!-- SITENAV -->
-        <nav class="sitenav">
-            <div class="sitenav-container container">
+        <nav class="container">
+            <div class="sitenav">
                 <ul class="sitenav-list">
                     <li class="sitenav-item">
                         <a class="sitenav-link" href="#">Главное</a>
