--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
 
         <!-- SITENAV -->
-        <nav class="container">
-            <div class="sitenav">
+        <div class="container">
+            <nav class="sitenav">
                 <ul class="sitenav-list">
                     <li class="sitenav-item">
                         <a class="sitenav-link" href="#">Главное</a>
@@ -85,8 +85,13 @@
                         <a class="sitenav-link" href="#">Наука</a>
                     </li>
                 </ul>
-            </div>
-        </nav>
+            </nav>
+
+            <a class="site-header-banner-link" href="#">
+                <img class="site-header-banner-img" src="img/site-header-banner.jpg" alt="ShopMe image" width="1200" height="128" srcset="img/site-header-banner.jpg 1x, img/site-header-banner@2x.jpg 2x">
+            </a>
+        </div>
+
     </header>
 
 </body>
