Add news section html codes

--- a/index.html
+++ b/index.html
@@ -94,5 +94,72 @@
 
     </header>
 
+
+    <!-- MAIN-CONTENT -->
+    <main class="main-content">
+
+        <!-- NEWS -->
+        <div class="container">
+            <section class="news">
+                <ul class="news-list">
+                    <li class="news-item">
+                        <h2 class="news-title">Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного соглашения</h2>
+                        <p class="news-text">Лидер Социал-демократической партии Германии (СДПГ) и кандидат на должность...</p>
+                        <img class="news-img" src="img/news-1.jpg" alt="News Image" width="360" height="165" srcset="img/news-1.jpg 1x, img/news-1@2x.jpg 2x">
+                        <div class="news-time">
+                            <img class="news-time-icon" src="img/news-icon-1.png" alt="News Icon" width="20" height="20" srcset="img/news-icon-1.png 1x, img/news-icon-1@2x.png 2x">
+                            <span class="news-time-text">ИА Красная Весна <time>15:55</time></span>
+                        </div>
+                    </li>
+                    <li class="news-item">
+                        <h2 class="news-title">Ученые доказали экспериментальным путем пользу покровных культур</h2>
+                        <p class="news-text">Новое исследование ученых университета Иллинойса объединяет полевые данные... </p>
+                        <img class="news-img" src="img/news-2.jpg" alt="News Image" width="360" height="165" srcset="img/news-2.jpg 1x, img/news-2@2x.jpg 2x">
+                        <div class="news-time">
+                            <img class="news-time-icon" src="img/news-icon-2.png" alt="News Icon" width="20" height="20" srcset="img/news-icon-2.png 1x, img/news-icon-2@2x.png 2x">
+                            <span class="news-time-text">Газета.Ru <time>12:54</time></span>
+                        </div>
+                    </li>
+                    <li class="news-item">
+                        <h2 class="news-title">Baidu запустила публичный сервис роботакси Apollo Go в Шанхае</h2>
+                        <p class="news-text">Автопарк Baidu состоит из модифицированных электромобилей EV... </p>
+                        <img class="news-img" src="img/news-3.jpg" alt="News Image" width="360" height="165" srcset="img/news-3.jpg 1x, img/news-3@2x.jpg 2x">
+                        <div class="news-time">
+                            <img class="news-time-icon" src="img/news-icon-3.png" alt="News Icon" width="20" height="20" srcset="img/news-icon-3.png 1x, img/news-icon-3@2x.png 2x">
+                            <span class="news-time-text">Хайтек+ <time>13:44</time></span>
+                        </div>
+                    </li>
+                    <li class="news-item">
+                        <h2 class="news-title">Стали известны ёмкости аккумуляторов всех моделей iPhone 13</h2>
+                        <p class="news-text">Во время презентации iPhone 13 Apple придала большое значения...</p>
+                        <img class="news-img" src="img/news-4.jpg" alt="News Image" width="360" height="165" srcset="img/news-4.jpg 1x, img/news-4@2x.jpg 2x">
+                        <div class="news-time">
+                            <img class="news-time-icon" src="img/news-icon-1.png" alt="News Icon" width="20" height="20" srcset="img/news-icon-4.png 1x, img/news-icon-4@2x.png 2x">
+                            <span class="news-time-text">Digger.ru <time>14:25</time></span>
+                        </div>
+                    </li>
+                    <li class="news-item">
+                        <h2 class="news-title">Nature: ученые смогли доказать природное происхождение коронавируса SARS-CoV-2</h2>
+                        <p class="news-text">Во время презентации iPhone 13 Apple придала большое значение...</p>
+                        <img class="news-img" src="img/news-5.jpg" alt="News Image" width="360" height="165" srcset="img/news-5.jpg 1x, img/news-5@2x.jpg 2x">
+                        <div class="news-time">
+                            <img class="news-time-icon" src="img/news-icon-5.png" alt="News Icon" width="20" height="20" srcset="img/news-icon-5.png 1x, img/news-icon-5@2x.png 2x">
+                            <span class="news-time-text">Lenta.ru <time>10:54</time></span>
+                        </div>
+                    </li>
+                    <li class="news-item">
+                        <h2 class="news-title">Китайская марка JAC повысила цены на лифтбек и пикап в России</h2>
+                        <p class="news-text">Две модели китайского бренда JAC из пяти, представленных на российском...</p>
+                        <img class="news-img" src="img/news-6.jpg" alt="News Image" width="360" height="165" srcset="img/news-6.jpg 1x, img/news-6@2x.jpg 2x">
+                        <div class="news-time">
+                            <img class="news-time-icon" src="img/news-icon-6.png" alt="News Icon" width="20" height="20" srcset="img/news-icon-6.png 1x, img/news-icon-6@2x.png 2x">
+                            <span class="news-time-text">Тарантас Ньюс <time>10:44</time></span>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+        </div>
+    </main>
+
 </body>
 </html>
