--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@
                     </li>
                 </ul>
             </section>
+
+            <!-- AD -->
+            <div class="container">
+                <section class="ad">
+                    <h2 class="ad-title">Хотите быть в курсе свежих новостей?  Включите уведомления!</h2>
+                    <a class="ad-link button" href="#">Включит</a>
+                </section>
+            </div>
         </div>
     </main>
 
