Add comment to currency-rates

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
     <!-- SITE-HEADER -->
     <header class="site-header">
+
         <!-- SITE-HEADER-TOP -->
         <div class="site-header-top">
             <div class="site-header-top-container container">
@@ -27,6 +28,8 @@
                     <a class="site-header-logo" href="index.html">
                         <img class="site-header-logo-img" src="img/logo-purple.svg.svg" alt="N24 logo" width="264" height="28">
                     </a>
+
+                    <!-- CURRENCY RATES -->
                     <ul class="currency-rates">
                         <li class="currency-rates-item">
                             <b class="currency-rates-type">$</b>
