--- a/index.html
+++ b/index.html
@@ -194,7 +194,15 @@
                 </article>
             </div>
         </section>
-        
+
+
+        <!-- NOTIFICATIONS-CTA -->
+        <section class="notifications-cta">
+            <div class="notification-cta-text">Хотите быть в курсе свежих новостей?  
+            <br>Включите уведомления!</div>
+
+            <button class="button button-orange" type="button">Включить</button>
+        </section>
         </div>
     </main>
 
